--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "dependencies": {
         "gobo": "https://github.com/pgcrism/gobo.git#ecf",
         "json": "https://github.com/eiffelhub/json.git"
+    },
+    "scripts": {
+        "install": "./scripts/install.sh"
     }
 }
