--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "0.4.x",
-    "grunt-contrib-clean": "0.4.x"
+    "grunt-contrib-clean": "0.4.x",
+    "underscore": "*"
   }
 }
