--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "devDependencies": {
     "grunt": "0.4.x",
     "grunt-contrib-clean": "0.4.x",
-    "underscore": "*"
+    "grunt-eiffel": "0.4.x"
   }
 }
